<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vibely</string>
    <string name="nav_home">Home</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_create">Create</string>
    <string name="nav_activity">Activity</string>
    <string name="nav_profile">Profile</string>
</resources>
